--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Landing Page Dicoding</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/app.css">
+    <!-- Font Awesome 5.15.4 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--FONT-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,5 +29,32 @@
         </nav>
     </header>
     <!--KONTEN-->
+    <main>
+        <div class="content">
+            <div class="content-description">
+                <h1>Dicoding Indonesia</h1>
+                <p>
+                    Kami yakin pendidikan teknologi adalah fondasi bagi setiap bangsa agar menjadi yang
+                    terdepan dalam menghadapi dunia digital. Dicoding hadir sebagai platform pendidikan
+                    teknologi yang membantu menghasilkan talenta digital berstandar global. Semua demi
+                    mengakselerasi Indonesia agar menjadi yang terdepan.
+                </p>
+                <button>Lebih Lanjut</button>
+            </div>
+            <div class="content-image">
+                <img src="img/circle-g.jpg" alt="Dicoding Indonesia">
+            </div>
+        </div>
+        <aside>
+            <div class="social-media">
+                <ul>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                </ul>
+            </div>
+        </aside>
+    </main>
 </body>
 </html>
